# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.bat
data/: collectable.pafx  damage1.json  hexagon.json  katamari.json  laser_beam.pafx  mana.json  map1.tmx  sheet.tsx
include/game/app/: application.hpp  delegate.hpp
include/game/base/: cache.hpp  cloneable.hpp  dictionary.hpp  dispatch_queue.hpp  object.hpp  pointer.hpp  state_machine.hpp
include/game/cl/: environment.hpp
include/game/debug/: debug.hpp  drawer.hpp
include/game/graphics/: batch.hpp  blend_func.hpp  frame_buffer.hpp  shader.hpp
include/game/graphics/assets/: asset.hpp
include/game/graphics/effects/lighting/: directional_light.hpp  light.hpp  point_light.hpp  positional_light.hpp  renderer.hpp
include/game/graphics/render/: queue.hpp  renderable.hpp
include/game/io/: input.hpp
include/game/math/: affine_transform.hpp  math.hpp  transform.hpp  vector.hpp
include/game/nodes/: node.hpp  sprite.hpp
include/game/physics/: body.hpp
include/game/physics/collision/: aabb.hpp  collision.hpp  raycast.hpp
include/game/physics/shapes/: circle.hpp  shape.hpp
libs/glew/: glew.pc
libs/liquidfun/include/Box2D/Common/: b2Math.h
src/: CMakeLists.txt
src/app/: application.cpp  delegate.cpp
src/base/: cache.cpp  clock.cpp  dictionary.cpp  dispatch_queue.cpp  object.cpp  state_machine.cpp
src/cl/: environment.cpp
src/cpp/: Actor.cpp  Actor.h  ActorManager.cpp  ActorManager.h  Animation.h  AppDelegate.cpp  AppDelegate.h  AppListener.h  Application.cpp  Application.h  Batch.h  BlendFunc.cpp  BlendFunc.h  BlurRenderer.cpp  BlurRenderer.h  Buffer.cpp  Buffer.h  Bundle.cpp  Bundle.h  CLEnvironment.cpp  CLEnvironment.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Component.cpp  Component.h  DispatchQueue.cpp  DispatchQueue.h  FrameBuffer.cpp  FrameBuffer.h  Input.h  LightManager.cpp  LightManager.h  LuaManager.cpp  LuaManager.h  LuaScript.cpp  LuaScript.h  LuaScriptProtocol.h  MainWindow.cpp  (+49 more)
src/cpp/app/: CMakeLists.txt  application.cpp  application.hpp  delegate.cpp  delegate.hpp
src/cpp/base/: CMakeLists.txt  cache.cpp  cache.hpp  clock.cpp  clock.hpp  cloneable.hpp  dictionary.cpp  dispatch_queue.cpp  dispatch_queue.hpp  macros.hpp  object.cpp  object.hpp  pointer.hpp  signal.hpp  state_machine.cpp
src/cpp/box2dlights/: ConeLight.cpp  ConeLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  LightMap.cpp  LightMap.h  PointLight.cpp  PointLight.h  PositionalLight.cpp  PositionalLight.h  RayHandler.cpp  RayHandler.h
src/cpp/cl/: CMakeLists.txt  environment.cpp
src/cpp/debug/: CMakeLists.txt  drawer.cpp  drawer.hpp  log.hpp
src/cpp/graphics/: CMakeLists.txt  batch.cpp  blend_func.cpp  camera.cpp  camera.hpp  color.cpp  color.hpp  dimension.cpp  dimension.hpp  frame_buffer.cpp  gl.hpp  mesh.cpp  mesh.hpp  shader.cpp  shape_renderer.cpp  shape_renderer.hpp  texture.cpp  texture.hpp  vertex_data.cpp  vertex_data.hpp  window.cpp  window.hpp
src/cpp/graphics/assets/: asset.hpp
src/cpp/graphics/effects/lighting/: cone_light.cpp  cone_light.hpp  directional_light.cpp  light.cpp  light.hpp  point_light.cpp  positional_light.cpp  renderer.cpp  renderer.hpp
src/cpp/graphics/render/: protocol.hpp  queue.cpp  renderable.cpp
src/cpp/io/: CMakeLists.txt  file.cpp  file.hpp  input.cpp  json.cpp  json.hpp
src/cpp/math/: CMakeLists.txt  affine_transform.cpp  matrix.cpp  matrix.hpp  transform.cpp  vector.cpp
src/cpp/nodes/: CMakeLists.txt  node.cpp  sprite.cpp
src/cpp/nodes/particle/: emitter.cpp  emitter.hpp  particles.cpp  particles.hpp  system.cpp  system.hpp
src/cpp/physics/: CMakeLists.txt  body.cpp  callbacks.hpp  fixture.cpp  fixture.hpp  world.cpp  world.hpp
src/cpp/physics/collision/: aabb.cpp  dynamic_tree.cpp  dynamic_tree.hpp
src/cpp/physics/controllers/: controller2d.cpp  controller2d.hpp  raycast.cpp  raycast.hpp
src/cpp/physics/shapes/: circle.cpp  polygon.cpp  polygon.hpp
src/debug/: drawer.cpp
src/glsl/: base.frag  base.vert  bloom.frag  blur.frag  blur.vert  default.frag  default.vert  diffsue.frag  light.frag  light.vert  particle.frag  particle.vert  shadow.frag  shadow.vert  without_shadow.frag
src/glsl_/: base.frag  base.vert
src/graphics/: batch.cpp  blend_func.cpp  camera.cpp  color.cpp  dimension.cpp  frame_buffer.cpp  mesh.cpp  shader.cpp  shape_renderer.cpp  texture.cpp  vertex_data.cpp  window.cpp
src/graphics/effects/lighting/: cone_light.cpp  directional_light.cpp  light.cpp  point_light.cpp  positional_light.cpp  renderer.cpp
src/graphics/render/: queue.cpp  renderable.cpp
src/io/: file.cpp  input.cpp  json.cpp
src/lua/: MainCamera.lua  Player.lua
src/math/: matrix.cpp  transform.cpp  vector.cpp
src/nodes/: node.cpp  sprite.cpp
src/nodes/particle/: emitter.cpp  particles.cpp  system.cpp
src/opencl/: particles.opencl
src/physics/: body.cpp  fixture.cpp  world.cpp
src/physics/collision/: aabb.cpp  collision.cpp  dynamic_tree.cpp
src/physics/controllers/: controller2d.cpp  raycast.cpp
src/physics/shapes/: circle.cpp  polygon.cpp
tests/: CMakeLists.txt  assert.hpp
tests/base/: test_dictionary.cpp  test_pointer.cpp
tests/graphics/: test_color.cpp
